--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,6 +11,8 @@ env:
   SECRET_KEY: ${{secrets.SECRET_KEY}}
   ALGORITHM: ${{secrets.ALGORITHM}}
   ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
+
+  # HEROKU SECRETS; switch later
   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
   HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}}
   HEROKU_EMAIL: ${{secrets.HEROKU_EMAIL}}
@@ -35,25 +37,32 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v3
+
       - name: install python 3.9
         uses: actions/setup-python@v4
         with:
           python-version: '3.9' 
+
       - name: update pip
         run: python -m pip install --upgrade pip
+
       - name: install dependencies
         run: pip install -r requirements.txt
+
       - name: pytest testing
         run: |
           pip install pytest
           pytest
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
@@ -61,9 +70,9 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/bugtracker:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/bugtracker:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/bugtracker:buildcache,mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{secrets.DOCKER_HUB_REPOSITORY_NAME}}:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{secrets.DOCKER_HUB_REPOSITORY_NAME}}:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{secrets.DOCKER_HUB_REPOSITORY_NAME}}:buildcache,mode=max
 
   deploy:
     runs-on: ubuntu-latest
@@ -72,6 +81,8 @@ jobs:
     steps: 
       - name: pulling git repo
         uses: actions/checkout@v3
+        
+        # HEROKU; switch later
       - name: deploying to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
