--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,8 +11,10 @@ env:
   SECRET_KEY: ${{secrets.SECRET_KEY}}
   ALGORITHM: ${{secrets.ALGORITHM}}
   ACCESS_TOKEN_EXPIRE_MINUTES: ${{secrets.ACCESS_TOKEN_EXPIRE_MINUTES}}
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  DOCKER_HUB_REPOSITORY_NAME: ${{secrets.DOCKER_HUB_REPOSITORY_NAME}}
 
-  # HEROKU SECRETS; switch later
+  # HEROKU SECRETS
   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
   HEROKU_APP_NAME: ${{secrets.HEROKU_APP_NAME}}
   HEROKU_EMAIL: ${{secrets.HEROKU_EMAIL}}
@@ -54,6 +56,7 @@ jobs:
           pip install pytest
           pytest
 
+      # DOCKER
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -82,7 +85,7 @@ jobs:
       - name: pulling git repo
         uses: actions/checkout@v3
         
-        # HEROKU; switch later
+        # HEROKU
       - name: deploying to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
