--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     
     # DB container
     db:
-        image: postgres
+        image: postgres:14
         environment:
             - POSTGRES_PASSWORD=password123
             - POSTGRES_DB=bugtracker-db
