--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         build: .
         depends_on:
             - db
+            - test-db
         ports: 
             - 8000:8000
         env_file:
@@ -22,5 +23,15 @@ services:
         volumes:
             - db_data:/var/lib/postgresql/data
 
+    test-db:
+        image: postgres:14
+        environment:
+            - POSTGRES_PASSWORD=${TEST_DATABASE_PASSWORD}
+            - POSTGRES_DB=${TEST_DATABASE_NAME}
+
+        volumes:
+            - test_db_data:/var/lib/postgresql/data
+
 volumes:
     db_data:
+    test_db_data:
