--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         env_file:
             - ./.env
         volumes:
-            - ./:/usr/src/app:ro
+            - ./:/usr/src/app
         command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     
     db:
