--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2022.6.15.1
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+coverage==7.3.0
 cryptography==38.0.1
 dnspython==2.2.1
 ecdsa==0.18.0
@@ -32,6 +33,7 @@ pycparser==2.21
 pydantic==1.10.2
 pyparsing==3.0.9
 pytest==7.1.3
+pytest-cov==4.1.0
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
